# eBirdRecentObservations

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
assets/: index-B1QIWvie.css  index-C1dxpWc2.css  index-CC0SH5r6.css  index-CId9L_BD.js  index-Cu1iKhxc.js  index-D9lcpnnx.js  index-Dskn98ki.js
barchartData/: CH.json  DE.json  FR-GES-68.json  GB-ENG-NFK.json  GB-ENG.json  SA.json  manifest.json
public/barchartData/: EC-A.json  EC.json  FR-GES.json  FR.json  GB.json  KE.json  manifest.json
scripts/: download_barchart.py
src/: App.vue  main.js
src/components/: ObservationList.vue  RegionSearch.vue
src/config/: api.js
src/styles/: App.css
src/utils/: manifest.js  smoothing.js
